--- a/python/readme
+++ b/python/readme
@@ -1,1 +1,2 @@
 
+The file below is prepared in Jupyter notebook. There, one can find the routines for data importing, dataframe cleaning, statistics, data visualization etc
